*** empty log message ***

--- a/samples/token/omnetpp.ini
+++ b/samples/token/omnetpp.ini
@@ -5,7 +5,7 @@ warnings = yes
 snapshot-file = token.sna
 log-parchanges = no
 random-seed = 1
-total-stack-kb=2048 ;2MByte -- increase if necessary
+total-stack-kb=4096 ;4 Mbyte -- increase if necessary
 sim-time-limit = 60s
 ;cpu-time-limit= 180s
 
