--- a/configure.in
+++ b/configure.in
@@ -36,6 +36,9 @@ OMNETPP_BIN_DIR="$OMNETPP_ROOT/bin"
 OMNETPP_INCL_DIR="$OMNETPP_SRC_DIR/sim"
 OMNETPP_LIB_DIR="$OMNETPP_ROOT/lib"
 
+OMNETPP_TKENV_DIR="$OMNETPP_SRC_DIR/tkenv"
+OMNETPP_GNED_DIR="$OMNETPP_SRC_DIR/gned"
+
 #
 # Default values for other variables that come from configure.user.
 #
@@ -346,6 +349,9 @@ AC_SUBST(GNED_IF_POSSIBLE)
 
 AC_SUBST(TKENV_EMBED_SUFFIX)
 AC_SUBST(GNED_EMBED_SUFFIX)
+
+AC_SUBST(OMNETPP_TKENV_DIR)
+AC_SUBST(OMNETPP_GNED_DIR)
 
 #----------------------
 # Generate files.
