--- a/src/gned/Makefile.in
+++ b/src/gned/Makefile.in
@@ -25,7 +25,7 @@ GNED_EMBED_SUFFIX=@GNED_EMBED_SUFFIX@
 #
 COPTS=$(CFLAGS) $(TK_CFLAGS)
 
-OMNETPP_GNED_DIR=`@MYPWD@`
+OMNETPP_GNED_DIR=@OMNETPP_GNED_DIR@
 
 OBJS = gned$(GNED_EMBED_SUFFIX).o tklib.o arrow.o ebnf.tab.o lex.yy.o parsened.o disp.o nedfile.o
 
