--- a/src/gned/Makefile.in
+++ b/src/gned/Makefile.in
@@ -27,7 +27,7 @@ COPTS=$(CFLAGS) $(TK_CFLAGS)
 
 OMNETPP_GNED_DIR=@OMNETPP_GNED_DIR@
 
-OBJS = gned$(GNED_EMBED_SUFFIX).o tklib.o arrow.o ebnf.tab.o lex.yy.o parsened.o disp.o nedfile.o
+OBJS = gned$(GNED_EMBED_SUFFIX).o tklib.o arrow.o ebnf.tab.o lex.yy.o parsened.o nedfile.o
 
 #
 # Targets
@@ -55,9 +55,6 @@ parsened.o: parsened.cc
 
 nedfile.o: nedfile.cc
 	$(CXX) -c $(COPTS) nedfile.cc
-
-disp.o: disp.cc
-	$(CXX) -c $(COPTS) disp.cc
 
 lex.yy.o: lex.yy.c
 	$(CXX) -c $(COPTS) lex.yy.c
@@ -89,11 +86,10 @@ clean:
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
-ebnf.tab.o: ebnf.h ebnfcfg.h parsened.h nedfile.h disp.h
+ebnf.tab.o: ebnf.h ebnfcfg.h parsened.h nedfile.h
 lex.yy.o: ebnf.h ebnf.tab.h ebnfcfg.h parsened.h
 arrow.o: arrow.h
-disp.o: disp.h
 gned.o: arrow.h parsened.h ebnf.h tklib.h
 nedfile.o: nedfile.h parsened.h ebnf.h
-parsened.o: parsened.h ebnf.h nedfile.h disp.h tklib.h
+parsened.o: parsened.h ebnf.h nedfile.h tklib.h
 tklib.o: tklib.h
