--- a/src/gned/Makefile.vc
+++ b/src/gned/Makefile.vc
@@ -64,7 +64,7 @@ depend:
 	@ echo *** make depend not (yet) supported with MSVC
 
 clean:
-	del *.obj gned.exe *.ilk *.pdb 2> nul
+	del tclcode.cc *.obj gned.exe *.ilk *.pdb 2> nul
 
 realclean: clean
 	del lex.yy.c ebnf.tab.c ebnf.tab.h
