--- a/src/tkenv/Makefile.vc
+++ b/src/tkenv/Makefile.vc
@@ -67,8 +67,8 @@ depend:
 	@ echo *** make depend not (yet) supported with MSVC
 
 clean:
-	del *.obj tkenv.lib tkenv.dll tkenv.ilib tkenv.exp tclcode.cc 2> nul
-	del *.ilk *.pdb 2> nul
+	del tclcode.cc *.obj tkenv.lib tkenv.dll tkenv.ilib tkenv.exp 2> nul
+	del *.ilk *.idb *.pdb 2> nul
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
