--- a/src/utils/Makefile.vc
+++ b/src/utils/Makefile.vc
@@ -22,6 +22,7 @@ depend:
 	@ echo *** make depend not (yet) supported with MSVC
 clean:
 	del *.obj seedtool.exe tcl2c.exe replace.exe 2> nul
+	del *.ilk *.idb *.pdb 2> nul
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
