public API header files moved from src/sim/ to include/

--- a/configure.in
+++ b/configure.in
@@ -33,7 +33,7 @@ OMNETPP_SAMPLES_DIR="$OMNETPP_ROOT/samples"
 OMNETPP_BITMAP_PATH=".;./bitmaps;$OMNETPP_ROOT/bitmaps"
 
 OMNETPP_BIN_DIR="$OMNETPP_ROOT/bin"
-OMNETPP_INCL_DIR="$OMNETPP_SRC_DIR/sim"
+OMNETPP_INCL_DIR="$OMNETPP_ROOT/include"
 OMNETPP_LIB_DIR="$OMNETPP_ROOT/lib"
 
 OMNETPP_TKENV_DIR="$OMNETPP_SRC_DIR/tkenv"
