--- a/src/envir/Makefile.vc
+++ b/src/envir/Makefile.vc
@@ -73,25 +73,25 @@ clean:
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 args.obj: envdefs.h args.h
-cenvir.obj: envdefs.h args.h ../sim/cenvir.h ../sim/defs.h omnetapp.h ../sim/carray.h
-cenvir.obj: ../sim/cobject.h ../sim/util.h slaveapp.h ../sim/cmodule.h
-cenvir.obj: ../sim/ccor.h ../sim/chead.h ../sim/cqueue.h ../sim/cgate.h
-cenvir.obj: ../sim/csimul.h ../sim/errmsg.h ../sim/cmsgheap.h ../sim/coutvect.h
-cenvir.obj: ../sim/cnetmod.h
-cinifile.obj: envdefs.h ../sim/cenvir.h ../sim/defs.h ../sim/util.h cinifile.h patmatch.h
-main.obj: envdefs.h ../sim/cobject.h ../sim/defs.h ../sim/util.h ../sim/csimul.h
-main.obj: ../sim/errmsg.h ../sim/chead.h ../sim/cmsgheap.h ../sim/coutvect.h
-main.obj: ../sim/ccor.h ../sim/cenvir.h
-omnetapp.obj: envdefs.h args.h omnetapp.h ../sim/carray.h ../sim/cobject.h ../sim/defs.h
-omnetapp.obj: ../sim/util.h ../sim/cenvir.h cinifile.h patmatch.h
-omnetapp.obj: ../sim/ctypes.h ../sim/chead.h ../sim/ccor.h ../sim/csimul.h
-omnetapp.obj: ../sim/errmsg.h ../sim/cmsgheap.h ../sim/coutvect.h ../sim/cpar.h
-omnetapp.obj: ../sim/cnetmod.h ../sim/cmodule.h ../sim/cqueue.h ../sim/cgate.h
-patmatch.obj: envdefs.h patmatch.h ../sim/defs.h
-seeds.obj: envdefs.h omnetapp.h ../sim/carray.h ../sim/cobject.h ../sim/defs.h
-seeds.obj: ../sim/util.h ../sim/cenvir.h
-slaveapp.obj: envdefs.h slaveapp.h omnetapp.h ../sim/carray.h ../sim/cobject.h
-slaveapp.obj: ../sim/defs.h ../sim/util.h ../sim/cenvir.h cinifile.h
-slaveapp.obj: ../sim/csimul.h ../sim/errmsg.h ../sim/chead.h ../sim/cmsgheap.h
-slaveapp.obj: ../sim/coutvect.h ../sim/ccor.h ../sim/cnetmod.h ../sim/cmodule.h
-slaveapp.obj: ../sim/cqueue.h ../sim/cgate.h
+cenvir.obj: envdefs.h args.h $(OMNETPP_INCL_DIR)/cenvir.h $(OMNETPP_INCL_DIR)/defs.h omnetapp.h $(OMNETPP_INCL_DIR)/carray.h
+cenvir.obj: $(OMNETPP_INCL_DIR)/cobject.h $(OMNETPP_INCL_DIR)/util.h slaveapp.h $(OMNETPP_INCL_DIR)/cmodule.h
+cenvir.obj: $(OMNETPP_INCL_DIR)/ccor.h $(OMNETPP_INCL_DIR)/chead.h $(OMNETPP_INCL_DIR)/cqueue.h $(OMNETPP_INCL_DIR)/cgate.h
+cenvir.obj: $(OMNETPP_INCL_DIR)/csimul.h $(OMNETPP_INCL_DIR)/errmsg.h $(OMNETPP_INCL_DIR)/cmsgheap.h $(OMNETPP_INCL_DIR)/coutvect.h
+cenvir.obj: $(OMNETPP_INCL_DIR)/cnetmod.h
+cinifile.obj: envdefs.h $(OMNETPP_INCL_DIR)/cenvir.h $(OMNETPP_INCL_DIR)/defs.h $(OMNETPP_INCL_DIR)/util.h cinifile.h patmatch.h
+main.obj: envdefs.h $(OMNETPP_INCL_DIR)/cobject.h $(OMNETPP_INCL_DIR)/defs.h $(OMNETPP_INCL_DIR)/util.h $(OMNETPP_INCL_DIR)/csimul.h
+main.obj: $(OMNETPP_INCL_DIR)/errmsg.h $(OMNETPP_INCL_DIR)/chead.h $(OMNETPP_INCL_DIR)/cmsgheap.h $(OMNETPP_INCL_DIR)/coutvect.h
+main.obj: $(OMNETPP_INCL_DIR)/ccor.h $(OMNETPP_INCL_DIR)/cenvir.h
+omnetapp.obj: envdefs.h args.h omnetapp.h $(OMNETPP_INCL_DIR)/carray.h $(OMNETPP_INCL_DIR)/cobject.h $(OMNETPP_INCL_DIR)/defs.h
+omnetapp.obj: $(OMNETPP_INCL_DIR)/util.h $(OMNETPP_INCL_DIR)/cenvir.h cinifile.h patmatch.h
+omnetapp.obj: $(OMNETPP_INCL_DIR)/ctypes.h $(OMNETPP_INCL_DIR)/chead.h $(OMNETPP_INCL_DIR)/ccor.h $(OMNETPP_INCL_DIR)/csimul.h
+omnetapp.obj: $(OMNETPP_INCL_DIR)/errmsg.h $(OMNETPP_INCL_DIR)/cmsgheap.h $(OMNETPP_INCL_DIR)/coutvect.h $(OMNETPP_INCL_DIR)/cpar.h
+omnetapp.obj: $(OMNETPP_INCL_DIR)/cnetmod.h $(OMNETPP_INCL_DIR)/cmodule.h $(OMNETPP_INCL_DIR)/cqueue.h $(OMNETPP_INCL_DIR)/cgate.h
+patmatch.obj: envdefs.h patmatch.h $(OMNETPP_INCL_DIR)/defs.h
+seeds.obj: envdefs.h omnetapp.h $(OMNETPP_INCL_DIR)/carray.h $(OMNETPP_INCL_DIR)/cobject.h $(OMNETPP_INCL_DIR)/defs.h
+seeds.obj: $(OMNETPP_INCL_DIR)/util.h $(OMNETPP_INCL_DIR)/cenvir.h
+slaveapp.obj: envdefs.h slaveapp.h omnetapp.h $(OMNETPP_INCL_DIR)/carray.h $(OMNETPP_INCL_DIR)/cobject.h
+slaveapp.obj: $(OMNETPP_INCL_DIR)/defs.h $(OMNETPP_INCL_DIR)/util.h $(OMNETPP_INCL_DIR)/cenvir.h cinifile.h
+slaveapp.obj: $(OMNETPP_INCL_DIR)/csimul.h $(OMNETPP_INCL_DIR)/errmsg.h $(OMNETPP_INCL_DIR)/chead.h $(OMNETPP_INCL_DIR)/cmsgheap.h
+slaveapp.obj: $(OMNETPP_INCL_DIR)/coutvect.h $(OMNETPP_INCL_DIR)/ccor.h $(OMNETPP_INCL_DIR)/cnetmod.h $(OMNETPP_INCL_DIR)/cmodule.h
+slaveapp.obj: $(OMNETPP_INCL_DIR)/cqueue.h $(OMNETPP_INCL_DIR)/cgate.h
